--- a/OOP - Projekt i grupp - Code Crusades (SUT23)/OOP - Projekt i grupp - Code Crusades (SUT23).csproj
+++ b/OOP - Projekt i grupp - Code Crusades (SUT23)/OOP - Projekt i grupp - Code Crusades (SUT23).csproj
@@ -8,4 +8,8 @@
     
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
+  </ItemGroup>
+
 </Project>
